--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
@@ -14,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "morgan": "~1.9.1",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "path": "^0.12.7"
   }
 }
